added more files

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,193 @@
-.App {
-  text-align: center;
+html,
+body {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    background-color: #292e39;
+    color: #d5e6f0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+    margin: 3rem auto;
+    text-align: center;
+    font-size: 4rem;
+    text-shadow: 1px 1px 5px black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+hr {
+    transform: rotate(90deg);
 }
 
-.App-link {
-  color: #61dafb;
+/* NavBar */
+#navbar {
+    position: sticky;
+    margin-left: -2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#navbarlist {
+    color: #d5e6f0;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+#navbaritem {
+    color: #d5e6f0;
+    margin: 0 1rem;
+    list-style: none;
+    font-weight: 600;
+    font-size: 1.5rem;
+}
+
+#navbaritem:hover {
+    text-shadow: 1px 1px 5px black;
+    transform: translate(0, -1px);
+}
+
+#navbaritemlink {
+    color: #d5e6f0;
+    text-decoration: none;
+}
+
+#banner {
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+    max-height: 400px;
+}
+
+#banner img {
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+}
+
+#imagetext {
+    position: absolute;
+    font-weight: 500;
+    font-size: 3rem;
+    transform: translate(-50%, -50%);
+    top: 40%;
+    left: 50%;
+    width: 100%;
+    text-shadow: 1px 1px 5px black;
+}
+
+#imageip {
+    position: absolute;
+    font-weight: 500;
+    font-size: 2.5rem;
+    transform: translate(-50%, -50%);
+    top: 70%;
+    left: 50%;
+    background-color: #292e39;
+    border-radius: .5rem;
+    padding: .5rem;
+}
+
+#maincontainer {
+    display: flex;
+    flex-direction: column;
+    background-color: #313742;
+    max-width: 1000px;
+    margin: 3rem auto;
+    border-radius: .5rem;
+}
+
+#maincontainer h2 {
+    margin: 1rem;
+    font-weight: 700;
+    font-size: 3rem;
+}
+
+#maincontainer p {
+    margin: 1rem;
+    font-weight: 500;
+    font-size: 1.5rem;
+}
+
+#maincontainer img {
+    align-self: center;
+    max-width: 90%;
+    border-radius: .5rem;
+    margin: 1rem;
+}
+
+/* Development Log */
+
+#maincontainer ul {
+    padding-left: 5rem;
+}
+
+#maincontainer li {
+    font-weight: 500;
+    font-size: 1.5rem;
+}
+
+/* Stats */
+#statscontainer {
+    flex-direction: column;
+    align-items: center;
+    background-color: #313742;
+    max-width: 1000px;
+    margin: 3rem auto;
+    border-radius: .5rem;
+}
+
+#statscontainer tr {
+    font-weight: 500;
+    font-size: 1.5rem;
+}
+
+#statscontainer th {
+    padding: 0 2.5rem;
+    text-align: center; 
+}
+
+#statscontainer td {
+    padding: 0 2.5rem;
+    text-align: center; 
+}
+
+/* Game Information */
+#gameinfocontainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 1rem;
+}
+
+#gameinfocontainer h2 {
+    margin: 0 .4rem;
+}
+
+#livekillscontainer {
+    margin: 3rem auto;
+    background-color: #313742;
+    border-radius: .5rem;
+}
+
+#livekillscontainer tr {
+    font-weight: 500;
+    font-size: 1.5rem;
+}
+
+#livekillscontainer th {
+    padding: 0 1rem;
+    text-align: center; 
+}
+
+#livekillscontainer td {
+    padding: 0 1rem;
+    text-align: center; 
 }
